overall cleaning and added project details

--- a/DH_BugTracker/Content/Custom.css
+++ b/DH_BugTracker/Content/Custom.css
@@ -12,7 +12,7 @@
 .txtBoxs {
     background-color: white;
     border: solid 1px grey;
-    padding-left: 5px
+    padding-left: 5px;
 }
 
 #avatarImg {
